--- a/Putty/index.html
+++ b/Putty/index.html
@@ -136,30 +136,26 @@
 
   <canvas id="starfield"></canvas>
 
-  <div class="blurred-rectangle">
-    <div class="image-container">
-      <img src="images/demon.jpg" alt="Demon Image">
-    </div>
-    <div class="text-container">Putty</div>
-    <div class="icon-container">
-      <a href="https://t.me/puttylover" target="_blank">
-        <img src="images/othertele.png" alt="Telegram">
-      </a>
-      <a href="https://vrchat.com/home/user/usr_17e28ac5-6153-4beb-bba4-190a29d8ce83" target="_blank">
-        <img src="images/vrchat.svg" alt="VRChat">
-      </a>
-      <a href="https://discord.com/users/1187445408142737428" target="_blank">
-        <img src="images/discord.svg" alt="Discord">
-      </a>
-      <a href="https://x.com/PuttyLover_" target="_blank">
-        <img src="images/x.png" alt="X">
-      </a>
-    </div>
-    <div class="typing-container">
-      <div class="typing-text" id="typing-text"></div>
-    </div>
+<div class="blurred-rectangle">
+  <div class="image-container">
+    <img src="images/demon.jpg" alt="Demon Image">
   </div>
-
+  <div class="text-container">Putty</div>
+  <div class="icon-container">
+    <a href="https://t.me/puttylover" target="_blank">
+      <img src="images/othertele.png" alt="Telegram">
+    </a>
+    <a href="https://vrchat.com/home/user/usr_17e28ac5-6153-4beb-bba4-190a29d8ce83" target="_blank">
+      <img src="images/vrchat.svg" alt="VRChat">
+    </a>
+    <a href="https://x.com/Zremirk" target="_blank">
+      <img src="images/x.png" alt="X">
+    </a>
+  </div>
+  <div class="typing-container">
+    <div class="typing-text" id="typing-text"></div>
+  </div>
+</div>
   <audio id="background-music" src="media/LikeHim.mp3"></audio>
 
   <script>
