--- a/Putty/index.html
+++ b/Putty/index.html
@@ -148,13 +148,17 @@
     <a href="https://vrchat.com/home/user/usr_17e28ac5-6153-4beb-bba4-190a29d8ce83" target="_blank">
       <img src="images/vrchat.svg" alt="VRChat">
     </a>
-    <a href="https://x.com/Zremirk" target="_blank">
+    <a href="https://x.com/PuttyLover_" target="_blank">
       <img src="images/x.png" alt="X">
+    </a>
+    <a href="https://signal.me/#eu/mwUCcNQMzLRvdSKluIJJfoSciTMLTyW_4pg55hoJtyCvCDhpyzdLeZ7H8x_0Y3X8" target="_blank">
+      <img src="images/Signal.png" alt="Signal">
     </a>
   </div>
   <div class="typing-container">
     <div class="typing-text" id="typing-text"></div>
   </div>
+</div>
 </div>
   <audio id="background-music" src="media/LikeHim.mp3"></audio>
 
