--- a/Putty/index.html
+++ b/Putty/index.html
@@ -170,7 +170,7 @@
     }
 
     if (isMobile()) {
-      window.location.href = "https://newgens.lol/Putty#/";
+      window.location.href = "https://newgens.lol/Puttym/";
     }
 
     const canvas = document.getElementById('starfield');
