--- a/Puttym/index.html
+++ b/Puttym/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Putty - Mobile Version</title>
+  <title>Putty Mobile</title>
   <link rel="icon" href="images/Crown.ico" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
   <style>
@@ -23,8 +23,8 @@
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      width: 90%;
-      height: 80%;
+      width: 80%;
+      height: 400px;
       background: rgba(255, 255, 255, 0.1);
       backdrop-filter: blur(5px);
       border-radius: 15px;
@@ -53,24 +53,23 @@
     }
     .text-container {
       position: absolute;
-      top: 150px;
+      top: 140px;
       left: 50%;
       transform: translateX(-50%);
       text-align: center;
       font-family: 'Press Start 2P', cursive;
-      font-size: 32px;
+      font-size: 24px;
       color: white;
       text-shadow: 0 0 10px rgba(255, 255, 255, 0.8), 0 0 20px rgba(255, 255, 255, 0.6);
     }
     .icon-container {
       position: absolute;
-      top: 200px;
+      top: 50%;
       left: 50%;
-      transform: translateX(-50%);
+      transform: translateY(-50%) translateX(-50%);
       display: flex;
-      gap: 10px;
-      justify-content: center;
-      flex-wrap: wrap;
+      flex-direction: row;
+      gap: 15px;
     }
     .icon-container img {
       width: 40px;
@@ -99,27 +98,52 @@
     }
     .overlay-text {
       font-family: 'Press Start 2P', cursive;
-      font-size: 24px;
+      font-size: 32px;
       color: white;
       text-align: center;
       text-shadow: 0 0 10px rgba(255, 255, 255, 0.8), 0 0 20px rgba(255, 255, 255, 0.6);
     }
+    .typing-container {
+      position: absolute;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      font-family: 'Press Start 2P', cursive;
+      font-size: 14px;
+      color: white;
+      text-align: center;
+      width: 90%;
+      max-width: 550px;
+    }
+    .typing-text {
+      display: inline-block;
+      overflow: hidden;
+      border-right: 2px solid white;
+      white-space: nowrap;
+      animation: blink-caret 0.75s step-end infinite;
+    }
+    @keyframes blink-caret {
+      from, to { border-color: transparent; }
+      50% { border-color: white; }
+    }
 
-    @media (min-width: 768px) {
+    /* Mobile-specific adjustments */
+    @media (max-width: 768px) {
       .blurred-rectangle {
-        width: 600px;
-        height: 400px;
-      }
-      .image-container {
-        width: 150px;
-        height: 150px;
+        width: 90%;
+        height: 350px;
       }
       .text-container {
-        font-size: 48px;
+        font-size: 20px;
+      }
+      .icon-container {
+        flex-direction: row;
+        justify-content: center;
+        width: 100%;
       }
       .icon-container img {
-        width: 48px;
-        height: 48px;
+        width: 35px;
+        height: 35px;
       }
     }
   </style>
@@ -131,26 +155,29 @@
 
   <canvas id="starfield"></canvas>
 
-  <div class="blurred-rectangle">
-    <div class="image-container">
-      <img src="images/demon.jpg" alt="Demon Image">
-    </div>
-    <div class="text-container">Putty</div>
-    <div class="icon-container">
-      <a href="https://t.me/puttylover" target="_blank">
-        <img src="images/othertele.png" alt="Telegram">
-      </a>
-      <a href="https://vrchat.com/home/user/usr_17e28ac5-6153-4beb-bba4-190a29d8ce83" target="_blank">
-        <img src="images/vrchat.svg" alt="VRChat">
-      </a>
-      <a href="https://x.com/PuttyLover_" target="_blank">
-        <img src="images/x.png" alt="X">
-      </a>
-      <a href="https://signal.me/#eu/mwUCcNQMzLRvdSKluIJJfoSciTMLTyW_4pg55hoJtyCvCDhpyzdLeZ7H8x_0Y3X8" target="_blank">
-        <img src="images/Signal.png" alt="Signal">
-      </a>
-    </div>
+<div class="blurred-rectangle">
+  <div class="image-container">
+    <img src="images/demon.jpg" alt="Demon Image">
   </div>
+  <div class="text-container">Putty</div>
+  <div class="icon-container">
+    <a href="https://t.me/puttylover" target="_blank">
+      <img src="images/othertele.png" alt="Telegram">
+    </a>
+    <a href="https://vrchat.com/home/user/usr_17e28ac5-6153-4beb-bba4-190a29d8ce83" target="_blank">
+      <img src="images/vrchat.svg" alt="VRChat">
+    </a>
+    <a href="https://x.com/PuttyLover_" target="_blank">
+      <img src="images/x.png" alt="X">
+    </a>
+    <a href="https://signal.me/#eu/mwUCcNQMzLRvdSKluIJJfoSciTMLTyW_4pg55hoJtyCvCDhpyzdLeZ7H8x_0Y3X8" target="_blank">
+      <img src="images/Signal.png" alt="Signal">
+    </a>
+  </div>
+  <div class="typing-container">
+    <div class="typing-text" id="typing-text"></div>
+  </div>
+</div>
 
   <audio id="background-music" src="media/LikeHim.mp3"></audio>
 
@@ -160,7 +187,7 @@
     }
 
     if (isMobile()) {
-      window.location.href = "https://newgens.lol/Putty#/";
+      window.location.href = "https://newgens.lol/Puttym/";
     }
 
     const canvas = document.getElementById('starfield');
@@ -217,6 +244,53 @@
       requestAnimationFrame(animate);
     }
 
+    const typingText = document.getElementById('typing-text');
+    const quotes = [
+      "Lose the ego ethug",
+      "written by me :3",
+      "I <3 sublime txt editor",
+      "Putty lover",
+      "Linux mint is based",
+      "stop flashcarding fatty",
+      "python :3",
+      "everyone should just vibe",
+      "arch is torture but to each his own",
+      "thank god for public java/css effects",
+      "kardi is fat",
+      "love my homies no homo",
+      "erm I'm witteraly in da mainfwame"
+    ];
+
+    quotes.sort(() => Math.random() - 0.5);
+
+    let quoteIndex = 0;
+    let charIndex = 0;
+    let isDeleting = false;
+
+    function typeQuote() {
+      const currentQuote = quotes[quoteIndex];
+      if (!isDeleting) {
+        typingText.textContent = currentQuote.slice(0, charIndex + 1);
+        charIndex++;
+        if (charIndex === currentQuote.length) {
+          isDeleting = true;
+          setTimeout(typeQuote, 2000);
+        } else {
+          setTimeout(typeQuote, 100);
+        }
+      } else {
+        typingText.textContent = currentQuote.slice(0, charIndex - 1);
+        charIndex--;
+        if (charIndex === 0) {
+          isDeleting = false;
+          quoteIndex = (quoteIndex + 1) % quotes.length;
+          setTimeout(typeQuote, 500);
+        } else {
+          setTimeout(typeQuote, 50);
+        }
+      }
+    }
+
     const overlay = document.querySelector('.overlay');
     const backgroundMusic = document.getElementById('background-music');
 
@@ -234,6 +308,7 @@
 
     initStars();
     animate();
+    typeQuote();
   </script>
 </body>
 </html>
