--- a/Puttym/index.html
+++ b/Puttym/index.html
@@ -18,8 +18,6 @@
     canvas {
       display: block;
     }
-
-    /* Blurred Rectangle Styles */
     .blurred-rectangle {
       position: absolute;
       top: 50%;
@@ -33,17 +31,13 @@
       border: 2px solid rgba(255, 255, 255, 0.5);
       box-shadow: 0 0 10px 5px rgba(255, 255, 255, 0.3);
     }
-
-    /* Image Container */
     .image-container {
       position: absolute;
       top: 20px;
       left: 50%;
       transform: translateX(-50%);
-      width: 30vw;
-      height: 30vw;
-      max-width: 150px;
-      max-height: 150px;
+      width: 100px;
+      height: 100px;
       border-radius: 50%;
       border: 2px solid rgba(255, 255, 255, 0.5);
       box-shadow: 0 0 10px 5px rgba(255, 255, 255, 0.3);
@@ -57,8 +51,6 @@
       height: 100%;
       object-fit: cover;
     }
-
-    /* Text Container */
     .text-container {
       position: absolute;
       top: 150px;
@@ -66,12 +58,10 @@
       transform: translateX(-50%);
       text-align: center;
       font-family: 'Press Start 2P', cursive;
-      font-size: 6vw;
+      font-size: 32px;
       color: white;
       text-shadow: 0 0 10px rgba(255, 255, 255, 0.8), 0 0 20px rgba(255, 255, 255, 0.6);
     }
-
-    /* Icon Container */
     .icon-container {
       position: absolute;
       top: 200px;
@@ -83,10 +73,8 @@
       flex-wrap: wrap;
     }
     .icon-container img {
-      width: 12vw;
-      height: 12vw;
-      max-width: 48px;
-      max-height: 48px;
+      width: 40px;
+      height: 40px;
       filter: brightness(0) invert(1);
       transition: transform 0.2s ease, filter 0.2s ease;
       cursor: pointer;
@@ -95,8 +83,6 @@
       transform: scale(1.2);
       filter: brightness(0) invert(1) drop-shadow(0 0 5px rgba(255, 255, 255, 0.8));
     }
-
-    /* Overlay Styles */
     .overlay {
       position: fixed;
       top: 0;
@@ -113,7 +99,7 @@
     }
     .overlay-text {
       font-family: 'Press Start 2P', cursive;
-      font-size: 5vw;
+      font-size: 24px;
       color: white;
       text-align: center;
       text-shadow: 0 0 10px rgba(255, 255, 255, 0.8), 0 0 20px rgba(255, 255, 255, 0.6);
@@ -151,9 +137,6 @@
     </div>
     <div class="text-container">Putty</div>
     <div class="icon-container">
-      <a href="https://t.me/puttylover" target="_blank">
-        <img src="images/othertele.png" alt="Telegram">
-      </a>
       <a href="https://vrchat.com/home/user/usr_17e28ac5-6153-4beb-bba4-190a29d8ce83" target="_blank">
         <img src="images/vrchat.svg" alt="VRChat">
       </a>
