--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             background: url('1.gif') center/cover no-repeat;
             cursor: default;
         }
-        
+
         body::before {
             content: '';
             position: absolute;
@@ -28,14 +28,13 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: rgba(0, 0, 0, 0.3); /* Darken effect */
             backdrop-filter: blur(8px);
             z-index: -1;
         }
-        
+
         #ascii-container {
             white-space: pre;
-            font-size: 18px; /* Adjusted font size */
+            font-size: 18px;
             line-height: 18px;
             transition: transform 0.15s ease-out;
             text-align: center;
@@ -48,56 +47,80 @@
             max-width: 90%;
         }
 
-        /* Dropdown menu styling */
         .dropdown {
             position: absolute;
             top: 20px;
             left: 50%;
             transform: translateX(-50%);
-            background-color: rgba(0, 0, 0, 0.5);
-            border-radius: 5px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.6);
-            padding: 10px;
             z-index: 10;
+            font-family: 'Pixelify Sans', monospace;
+            min-width: 150px;
         }
 
-        /* Dropdown button styling (just the arrow) */
         .dropdown button {
-            background-color: rgba(0, 0, 0, 0.7);
-            border: 1px solid rgba(255, 255, 255, 0.3);
+            background: rgba(0, 0, 0, 0.7);
+            border: 2px solid rgba(255, 255, 255, 0.2);
             padding: 12px 20px;
             color: white;
-            font-size: 24px; /* Larger arrow size */
-            border-radius: 5px;
+            font-size: 18px;
+            border-radius: 8px;
             cursor: pointer;
             transition: all 0.3s ease;
             display: flex;
-            justify-content: center;
             align-items: center;
-            font-family: 'Pixelify Sans', monospace;
+            justify-content: center;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.4);
+            backdrop-filter: blur(5px);
+            position: relative;
+            overflow: hidden;
+            width: 100%;
         }
 
         .dropdown button:hover {
-            background-color: rgba(0, 0, 0, 0.8);
-            border: 1px solid white;
+            background: rgba(0, 0, 0, 0.8);
+            border-color: rgba(255, 255, 255, 0.5);
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.6);
+        }
+
+        .dropdown button::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.1), transparent);
+            transition: 0.5s;
+        }
+
+        .dropdown button:hover::before {
+            left: 100%;
         }
 
         .dropdown button::after {
-            content: ' ▼'; /* Dropdown arrow */
-            font-size: 24px; /* Bigger arrow */
-            margin-left: 8px;
+            content: '☰';
+            font-size: 20px;
         }
 
-        /* Dropdown content styling */
         .dropdown-content {
             display: none;
             position: absolute;
-            top: 35px; /* Adjusted space between button and dropdown */
+            top: 100%;
             left: 0;
             width: 100%;
-            background-color: rgba(0, 0, 0, 0.6);
-            border-radius: 5px;
-            z-index: 1;
+            background: rgba(0, 0, 0, 0.8);
+            border-radius: 0 0 8px 8px;
+            border: 2px solid rgba(255, 255, 255, 0.2);
+            border-top: none;
+            box-shadow: 0 8px 25px rgba(0, 0, 0, 0.5);
+            backdrop-filter: blur(5px);
+            overflow: hidden;
+            animation: fadeIn 0.3s ease-out;
+        }
+
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(-10px); }
+            to { opacity: 1; transform: translateY(0); }
         }
 
         .dropdown:hover .dropdown-content {
@@ -105,21 +128,42 @@
         }
 
         .dropdown-content a {
-            padding: 12px 20px;
-            font-family: 'Pixelify Sans', monospace;
-            font-size: 18px;
+            padding: 12px 25px;
+            font-size: 16px;
             color: white;
             text-decoration: none;
-            transition: all 0.3s ease;
             display: block;
+            transition: all 0.3s ease;
+            position: relative;
+            text-align: center;
+            white-space: nowrap;
+        }
+
+        .dropdown-content a:not(:last-child) {
+            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
         }
 
         .dropdown-content a:hover {
-            background-color: rgba(255, 255, 255, 0.1);
-            color: #ffffff;
-            text-shadow: 0 0 8px white;
+            background: rgba(255, 255, 255, 0.1);
+            padding-left: 30px;
         }
 
+        .dropdown-content a::before {
+            content: '>';
+            position: absolute;
+            left: 15px;
+            opacity: 0;
+            transition: all 0.3s ease;
+        }
+
+        .dropdown-content a:hover::before {
+            opacity: 1;
+            left: 20px;
+        }
+
+        .dropdown-content a:hover {
+            text-shadow: 0 0 8px rgba(255, 255, 255, 0.8);
+        }
     </style>
 </head>
 <body>
@@ -136,9 +180,8 @@
                                                                ░                             
     </div>
 
-    <!-- Dropdown Menu -->
     <div class="dropdown">
-        <button>▼</button>
+        <button></button>
         <div class="dropdown-content">
             <a href="https://blog.newgens.lol" target="_blank">BLOG</a>
             <a href="https://newgens.lol/Putty" target="_blank">CONTACT</a>
